reloading after add/edit asset

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -368,7 +368,9 @@
             event.preventDefault()
         }
         $('#addAsset').foundation('reveal', 'close');
-        location.reload();
+        {% if asset_obj %}
+            location.href = "{% url 'asset_detail' group_id asset_obj.pk %}";
+        {% endif %}
     });
 
 </script>
