--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -7,7 +7,7 @@
  -->    <div class="row">
         <button type="button" class="right orange-button createAsset">
         <i class="fi-plus"> </i>
-        Add Asset
+        Asset
     </button>
     </div>
 </div>
