--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -82,8 +82,7 @@
             <div class="small-12 medium-10 large-10 columns">
             <label>
                     Asset description *
-                    <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Description" id="asset-descid" value=''>{% if asset_obj %} {{asset_obj.content|safe|striptags}}{% endif %}
-                    </textarea>
+                    <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Description" id="asset-descid" value=''>{% if asset_obj %} {{asset_obj.content|safe|striptags}}{% endif %}</textarea>
             </label>
             </div>
         </div>
@@ -350,29 +349,28 @@
                         // "asset_objective":asset_objective
                     },
                   url: "{% url 'create_edit_asset' group_id %}",
-                  datatype: "html",
+                  datatype: "json",
                   success: function(data) {
                     // $('#addAsset').html(data);
                     // $('#addAsset').foundation('reveal', 'open');
                     $('.save-asset').css('display', 'none')
                     $('.asset-content-area').css('display', 'block')
                     $('.asset_obj_val').attr('data-asset-obj-val',data);
+                    $('#addAsset').foundation('reveal', 'close');
+                    {% if asset_obj %}
+
+                        location.href = "{% url 'asset_detail' group_id asset_obj.pk %}";
+                    {% else %}
+                        location.reload();
+                    {% endif %}
                 }
             });
 
         }
         else{
-            console.log("else")
-            console.log(asset_name)
-            console.log(asset_description)
             event.preventDefault()
         }
-        $('#addAsset').foundation('reveal', 'close');
-        {% if asset_obj %}
-            location.href = "{% url 'asset_detail' group_id asset_obj.pk %}";
-        {% else %}
-        location.reload();
-        {% endif %}
+        
     });
 
 </script>
