--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -172,11 +172,13 @@
         $.ajax({
           url: "{% url 'inline_edit_res' group_id %}",
 
-          type: "GET",
+          type: "POST",
 
           data: {
             "node_id": "{{activity_node.pk}}",
-            "node_content": $(".activity-detail-content .content_val").html()
+            'csrfmiddlewaretoken': "{{csrf_token}}",
+            "node_content": $(".activity-detail-content .content_val").html(),
+            "type": "edit"
           },
           dataType: "html",
 
@@ -199,7 +201,9 @@
             "content_val": content_val,
             "node_id": "{{activity_node.pk}}",
             "custom_redirect": "view_course_page",
-            'csrfmiddlewaretoken': "{{csrf_token}}"
+            'csrfmiddlewaretoken': "{{csrf_token}}",
+            "type": "save"
+
           },
 
           type: "POST",
