--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -180,10 +180,12 @@
         $.ajax({
           url: "{% url 'inline_edit_res' group_id %}",
 
-          type: "GET",
+          type: "POST",
 
           data: {
-            node_id: "{{node.pk}}"
+            node_id: "{{node.pk}}",
+            "type": "edit",
+            'csrfmiddlewaretoken': "{{csrf_token}}"
           },
           dataType: "html",
 
@@ -207,7 +209,9 @@
           data: {
             content_val: content_val,
             node_id: "{{node.pk}}",
-            'csrfmiddlewaretoken': "{{csrf_token}}"
+            'csrfmiddlewaretoken': "{{csrf_token}}",
+            'type': "save"
+
           },
 
           type: "POST",
