--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -1246,6 +1246,9 @@ input[type="button"] {
 }
 
 
+
+
+
 .save-asset{
     margin-top: 9px;
     margin-right: -133px;
@@ -2983,6 +2986,7 @@ ul.jqtree-tree .jqtree-toggler {
     border: 1px solid;
     border-radius: 6px;
     text-transform: none;
+    margin-right:-11px;
 }
 
 
@@ -3002,8 +3006,8 @@ ul.jqtree-tree .jqtree-toggler {
 
     }
     .added-tags-div{
-            margin-left: 17px;
-            width: 96%;
+            margin-left: -206px;
+          
 
     }
     #add-tag-btn{
@@ -3103,4 +3107,19 @@ ul.jqtree-tree .jqtree-toggler {
 
 .page-name{
     margin-top:4px;
+}
+
+.asset_list{
+    margin-left:30px;
+}
+
+.interaction-settings-div{
+    margin-left:25px;
+    margin-top:10px;
+
+    .yes_no_disc_div{
+        text-align: center;
+        font-size: 24px;
+        font-weight: 300;
+    }
 }
