--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -29,7 +29,7 @@
             {% if activity_node.created_by == request.user.id or is_gstaff %}
             <div class="small-3 columns right">
                 <span data-dropdown="activity-page-settings-drop" aria-controls="activity-page-settings-drop" aria-expanded="false" class="orange-button right">
-                    Settings <i class="fa fa-chevron-down"></i>
+                    Actions <i class="fa fa-chevron-down"></i>
                 </span>
                 <ul id="activity-page-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
             
@@ -66,10 +66,10 @@
         <div class="activity-sheet-actions">
             <div class="row">
             {% if all_pages.count %}
-            <button type="button" class="orange-button delete-activity right" title="Click on the checkbox on the files below to Delete"><i class="fa fa-trash"></i> Activity Page</button>
+            <button type="button" class="orange-button delete-activity right" title="Click on the checkbox on the files below to Delete"><i class="fa fa-trash"></i> Delete</button>
             {% endif %}
             {% if user.is_authenticated %}
-            <a class="right orange-button-template" href="{% url 'create_course_page' group_id %}"><i class="fi-plus"></i> Activity Page</a>
+            <a class="right orange-button-template" href="{% url 'create_course_page' group_id %}"><i class="fi-plus"></i> Add</a>
             {% endif %}
 
 
