--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -294,7 +294,7 @@ This will not be used because now only existing activities will be added.
                                     </option>
                                 {% endif %}
                             {% endfor %}
-                          </select>
+                          </select><br/>
     <button type="button" class="button-hollow-grey save-lesson" data-node-id=""> Save Lesson </button>
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
