--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -1057,9 +1057,6 @@ label {
     margin-left: 20px;
 }
 
- label>.tag-ele{
-    text-transform: none;
-  }
 
 input[type="file"]::-webkit-file-upload-button{
     visibility: hidden;
@@ -3044,7 +3041,7 @@ ul.jqtree-tree .jqtree-toggler {
             width: 40%;
             color:#99aaba;
             font-size:10px;
-            // text-transform:uppercase;
+            text-transform:uppercase;
             letter-spacing:2px;
             margin-top: 15px;
             margin-left: 8px;
@@ -3085,8 +3082,8 @@ ul.jqtree-tree .jqtree-toggler {
 .activity-lang{
     border: 1px solid #cccccc;
     border-radius: 5px;
-    margin-top: 7px;
-    height: 40px;
+    // margin-top: 7px;
+    height: 38px;
 }
 
 /*
