--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -16,13 +16,16 @@
 	      </div>
 	    </div>
 
-  <div class="right small-12 medium-6 columns">
+          {% if 'audio' in node.if_file.mime_type or 'video' in node.if_file.mime_type or 'image' in node.if_file.mime_type %}
+
+          <div class="right small-12 medium-6 columns">
           {% if node.created_by == request.user.id or is_gstaff %}
                 <span data-dropdown="assetcontent-settings-drop" aria-controls="assetcontent-settings-drop" aria-expanded="false" class="orange-button right">
                     Link/Add Related File <i class="fa fa-chevron-down"></i>
                 </span>
                 <ul id="assetcontent-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
-                <li><a onclick="load_file_upload_modal(1)">Add Alternate File</a> </li>
+ 
+                  <li><a onclick="load_file_upload_modal(1)">Add Alternate File</a> </li>
                 {% if 'video' in node.if_file.mime_type or 'audio' in node.if_file.mime_type %}
                   <li><a onclick="load_file_upload_modal(2)">Add Transcript</a></li>
                 {%  endif %}
@@ -31,6 +34,7 @@
                 {%  endif %}
             {%  endif %}
             </div>
+            {% endif %}
         </div>
             
         </div>
