--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -84,7 +84,7 @@
     
         <div class="row">
             {% for each in all_pages %}
-                <a class="view-page" data-page-id="{{each.pk}}" data-node-name="{{each.name}}" title="{{each.name}}" href="{% url 'view_course_page' group_id each.pk %}">
+                <a class="view-page" data-page-id="{{each.pk}}" data-del-activity-page-id="{{each.pk}}"  data-node-name="{{each.name}}" title="{{each.name}}" href="{% url 'view_course_page' group_id each.pk %}">
                     <div class="small-12 medium-6 large-3 columns">
                         <div class="asset_tile">
                             <div class="asset_preview">
@@ -125,7 +125,7 @@
                 $('.activitynode:checked').each(function() {
                     coll_arr.push($(this).val());
                 });
-
+                console.log(coll_arr)
                 $.ajax({
                           type: "POST",
                           data:{
@@ -137,17 +137,16 @@
                           success: function(data) {
                             console.log(data)
                             if (data=="success"){
-                                $.each(coll_arr, function(ind,activity_id){
-                                    $("a[data-page-id='"+activity_id+"']").addClass('hide')
-                                })
-                                // location.reload()
+                                // $.each(coll_arr, function(ind,activity_id){
+                                //     $("a[data-del-activity-page-id='"+activity_id+"']").addClass('hide')
+                                // })
+                                location.reload()
                             }
                             else{
                                 alert("Something went wrong. Please try again later.")
                             }
                         }
                     });
-
                 }
         }
         else{
