--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
@@ -42,7 +42,7 @@
         {% if thr_int_type %}
           {{thr_int_type}} {% if all_replies|length > 0 %}({{all_replies|length }}) {% endif %}
         {% else %}
-          Comment  {% if all_replies|length > 0 %} ({{all_replies|length }}) {% endif %}
+          Feedback  {% if all_replies|length > 0 %} ({{all_replies|length }}) {% endif %}
         {% endif %}
       </div>
     {% endif %}
@@ -266,7 +266,7 @@
     if(totalReplies == 0)
     {
       $(".view-discussion span").fadeOut().fadeIn().html(" {% trans 'Begin Discussion' %}");
-      $("#create-discussion").text("{% trans 'Comment' %}" + $("h1 span.node[itemprop]").text().trim());
+      $("#create-discussion").text("{% trans 'Feedback' %}" + $("h1 span.node[itemprop]").text().trim());
     }
     else
     {
