--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -1,5 +1,6 @@
-<div class="row">
-    <div class="small-12 columns">
+
+<div class="row group_content">
+    <div class="small-12 columns  group_sections_content" id="scstyle">
         <form enctype="multipart/form-data" method="post" action="{{url}}">
             {% csrf_token %}
             <!-- _id -->
