--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translate_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translate_form.html
@@ -2,6 +2,10 @@
 {# {% load get_metadata_values get_attribute_value from ndf_tags %} #}
 
 {% block title %} {{title}} {% endblock %}
+{% block head %} 
+	<script type="text/javascript" src="/static/ndf/bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script> 
+{% endblock %}
+
 
 {% block body_content %}
     {% include 'ndf/widget_node_form.html' %}
