--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_admin_page.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_admin_page.html
@@ -14,7 +14,7 @@
         </div>
 
     </div>
-<button type="submit" class="right blue-white-button save-metadata">Save Changes</button>
+<button type="submit" class="right blue-white-button save-metadata">Save</button>
 </form>
 <script type="text/javascript">
     $( ".save-metadata" ).click(function(event) {
