help page button added in activity page

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -39,6 +39,7 @@
                 <li><a title="Edit Content" class="edit_res_unit">{% trans " Edit Content" %}</a></li>
                 <li><a title="Edit Interaction Settings" class="edit-interaction">{% trans "Interaction Settings" %}</a></li>
                 <li><a title="add admin page" class="add-admin-page">{% trans "add-admin-page" %}</a></li>
+                <li><a title="add help page" class="add-help-page">{% trans "add-help-page" %}</a></li>
                 <li><a href="{% url 'all_translations' group_id activity_node.pk %}" target="_blank">Alternate Language</a></li>
                 </ul>
 
@@ -183,6 +184,22 @@
                         "node_id":'{{activity_node.pk}}',
                     },
                   url: "{% url 'get_admin_page_form' group_id  %}",
+                  datatype: "html",
+                  success: function(data) {
+                  $('#addAsset').foundation('reveal', 'open');
+                  $('#addAsset').html(data);
+                }
+            });
+        });
+
+        $( ".add-help-page" ).click(function(event) {
+            $.ajax({
+                  type: "POST",
+                  data:{
+                        'csrfmiddlewaretoken': "{{csrf_token}}",
+                        "node_id":'{{activity_node.pk}}',
+                    },
+                  url: "{% url 'get_help_page_form' group_id  %}",
                   datatype: "html",
                   success: function(data) {
                   $('#addAsset').foundation('reveal', 'open');
